src/Screens/Home/styles/Features.css
  @keyframes track-right-in {
    from {
      transform: translateX(-100%);
      opacity: 0;
    }
    to {
      transform: translateX(0);
      opacity: 1;
    }
  }
  
  .track-right-in {
    animation: track-right-in 1s ease-out forwards;
  }
  

  .scale-0 {
    transform: scale(0);
  }
  
  .scale-100 {
    transform: scale(1);
  }

  .custom-grid-cols {
    grid-template-columns: 1fr 3fr;
    background-color: antiquewhite;
  }

  /* box border animations  */
  .feature-glass {
    background: rgba(255, 255, 255, 0.04);
    backdrop-filter: blur(4px);
    -webkit-backdrop-filter: blur(4px);
    transition: all 500ms ease-in-out;
    border-bottom: 1px solid rgba(255, 255, 255, 0.18);
  }
  .feature-glass:hover {
    box-shadow: 0 2px 12px 0 rgba(129, 131, 152, 0.37);
    scale: 1.04;
  }


  /* svg box border animatio */
  .svg-glass {
    background-color: #03091D;
    backdrop-filter: blur(4px);
    /* -webkit-backdrop-filter: blur(4px); */
    transition: all 500ms ease-in-out;
    border: 1px solid rgba(255, 255, 255, 0.18);
  }
  .svg-glass:hover {
    box-shadow: 0 2px 12px 0 rgba(129, 131, 152, 0.37);
    scale: 1.04;
  }


  /* features svg styles  */
  .six-line-svg {
    position: relative;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 700px;
  }
  
  .image-center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 120px;
    width: 120px;
    /* background-color: aquamarine; */
  }
  
  .image-end {
    position: absolute;
    transition: all 1s ease;
    transition-delay: 200ms;
}
  
  .image1 {
    top: calc(50% - 150px);
    left: calc(50% - 270px);
    transform: translate(-50%, -50%);
  }
  
  .image2 {
    top: calc(50% -  150px);
    left: calc(50% + 270px);
    transform: translate(-50%, -50%);
  }
  
  .image3 {
    top: 50%;
    left: calc(50% + 380px);
    transform: translate(-50%, -50%);
  }
  
  .image4 {
    top: calc(50% + 150px);
    left: calc(50% + 270px);
    transform: translate(-50%, -50%);
  }
  
  .image5 {
    top: 50%;
    left: calc(50% - 380px);
    transform: translate(-50%, -50%);
  }
  
  .image6 {
    top: calc(50% + 150px);
    left: calc(50% - 270px);
    transform: translate(-50%, -50%);
  }
  .line {
    stroke-dasharray: 1000, 1000;
    stroke-dashoffset: 1000;
    transition: stroke-dasharray 2s ease, stroke-dashoffset 2s ease;
  }
  
  .six-line-svg:hover .line {
    stroke-dashoffset: 0;
  }
  
  .six-line-svg:hover .image-end {
    box-shadow: 0 2px 12px 0 white;
  }

